# NeuralAudio

./: .gitmodules  CMakeLists.txt  CREDITS.md  LICENSE  NeuralAudio.sln  README.md
.github/workflows/: build.yml  dotnet-desktop.yml  release.yml
NamModel/: NamModel.cs
NeuralAudio/: Activation.h  CMakeLists.txt  ChannelBuffer.h  CompositeModel.h  InternalModel.h  LSTM.h  LSTMDynamic.h  MatMul.h  NAMModel.h  NeuralAudio - Shortcut.lnk  NeuralModel.cpp  NeuralModel.h  NeuralModelImpl.h  RTNeuralLoader.cpp  RTNeuralLoader.h  RTNeuralModel.h  TemplateHelper.h  WaveNet.h  WaveNetDynamic.h
NeuralAudioCAPI/: CMakeLists.txt  NeuralAudioCApi.cpp  NeuralAudioCApi.h
NeuralAudioCSharp/: NeuralAudioCSharp.sln
NeuralAudioCSharp/NeuralAudio/: NativeApi.cs  NeuralAudio.csproj  NeuralAudio.sln  NeuralModel.cs
NeuralAudioCSharp/NeuralAudio/NeuralAudio/: NeuralAudio.csproj  NeuralModel.cs
NeuralAudioCSharp/NeuralAudio/NeuralAudioTest/: NeuralAudioTest.csproj
NeuralAudioCSharp/NeuralAudioTest/: NeuralAudioTest.csproj  Program.cs
NeuralAudioVst/: EditorView.xaml  EditorView.xaml.cs  NAMPlugin.cs  NeuralAudioPlugin.cs  NeuralAudioVst.csproj
NeuralModel/: CoreAudioMLModel.cs  KerasModel.cs  NamModel.cs  NeuralModel.cs  NeuralModel.csproj
NeuralNet/: Activation.cs  LSTM.cs  MatrixF.cs  Network.cs  NeuralNet.projitems  NeuralNet.shproj  WaveNet.cs
TestApp/: App.xaml  App.xaml.cs  DummyHost.cs  MainWindow.xaml  MainWindow.xaml.cs  TestApp.csproj
Utils/: CMakeLists.txt  README.md
Utils/ModelTest/: CMakeLists.txt  ModelTest.cpp
Utils/Models/: BossWN-a2.nam  README.md
Utils/NamLstm/: CMakeLists.txt  NamLstm.cpp
